contact form/new mail host (moving host)

--- a/dominicshaw.net/index.html
+++ b/dominicshaw.net/index.html
@@ -738,6 +738,7 @@
                             <!-- \\ Begin Right Side \\ -->
                             <div class="Rightside">
                                 <h3>Get in touch!</h3>
+                                <div style="margin-top: -25px; margin-bottom: 10px; color: #f00; font-weight: bold;">PLEASE NOTE THIS FORM IS NOT FUNCTIONING WHILE MY WEBSITE MOVES HOST. PLEASE CHECK BACK SOON.</div>
                                 <address>
                                     Somewhere in Wimbledon.
                                 </address>
